--- a/index.html
+++ b/index.html
@@ -26,15 +26,21 @@
 
 <body>
 
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
+  <div class="card">
 
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
+    <img src="assets/images/avatar-jessica.jpeg" alt="jessica's profile picture"><br>
+
+    <h1>Jessica Randall</h1>
+    <h4 class="avid">London, United Kingdom</h4>
+    <p>"Front-end developer and avid reader."</p>
+
+    <button class="click">GitHub</button><br>
+    <button class="click">Frontend Mentor</button><br>
+    <button class="click">LinkedIn</button><br>
+    <button class="click">Twitter</button><br>
+    <button class="click">Instagram</button><br>
+
+  </div>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
