--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="styling.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
 
   <title>Frontend Mentor | Social links profile</title>
 
@@ -28,11 +33,11 @@
 
   <div class="card">
 
-    <img src="assets/images/avatar-jessica.jpeg" alt="jessica's profile picture"><br>
+    <img src="assets/images/avatar-jessica.jpeg" alt="jessica's profile picture">
 
-    <h1>Jessica Randall</h1>
-    <h4 class="avid">London, United Kingdom</h4>
-    <p>"Front-end developer and avid reader."</p>
+    <h3 class="boat">Jessica Randall</h3>
+    <p class="avid">London, United Kingdom</p>
+    <p class="boat">"Front-end developer and avid reader."</p>
 
     <button class="click">GitHub</button><br>
     <button class="click">Frontend Mentor</button><br>
