--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 
     <img src="assets/images/avatar-jessica.jpeg" alt="jessica's profile picture">
 
-    <h3 class="boat">Jessica Randall</h3>
-    <p class="avid">London, United Kingdom</p>
+    <div class="con">
+      <h3 class="boat">Jessica Randall</h3>
+      <h5 class="avid">London, United Kingdom</h5>
+    </div>
+
     <p class="boat">"Front-end developer and avid reader."</p>
 
     <button class="click">GitHub</button><br>
